--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-svg": "12.1.1",
+    "react-native-svg-icon": "^0.10.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
